--- a/docs/paper/paper.bib
+++ b/docs/paper/paper.bib
@@ -285,3 +285,45 @@
   year      =  2021,
   copyright = "https://creativecommons.org/licenses/by/4.0/"
 }
+
+@misc{VIDA2023,
+author = {VIDA},
+title = {{Google-Microsoft Open Buildings}},
+url = {https://beta.source.coop/repositories/vida/google-microsoft-open-buildings},
+urldate = {2024-07-30},
+year = {2023}
+}
+
+@article{Crippen2016,
+abstract = {Abstract. NASADEM is a near-global elevation model that is being produced primarily by completely reprocessing the Shuttle Radar Topography Mission (SRTM) radar data and then merging it with refined ASTER GDEM elevations. The new and improved SRTM elevations in NASADEM result from better vertical control of each SRTM data swath via reference to ICESat elevations and from SRTM void reductions using advanced interferometric unwrapping algorithms. Remnant voids will be filled primarily by GDEM3, but with reduction of GDEM glitches (mostly related to clouds) and therefore with only minor need for secondary sources of fill.},
+author = {Crippen, R. and Buckley, S. and Agram, P. and Belz, E. and Gurrola, E. and Hensley, S. and Kobrick, M. and Lavalle, M. and Martin, J. and Neumann, M. and Nguyen, Q. and Rosen, P. and Shimada, J. and Simard, M. and Tung, W.},
+doi = {10.5194/isprs-archives-XLI-B4-125-2016},
+issn = {2194-9034},
+journal = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+month = {jun},
+pages = {125--128},
+title = {{NASADEM GLOBAL ELEVATION MODEL: METHODS AND PROGRESS}},
+url = {https://isprs-archives.copernicus.org/articles/XLI-B4/125/2016/},
+volume = {XLI-B4},
+year = {2016}
+}
+
+@article{Boeing2017,
+author = {Boeing, Geoff},
+doi = {10.1016/j.compenvurbsys.2017.05.004},
+issn = {01989715},
+journal = {Computers, Environment and Urban Systems},
+month = {sep},
+pages = {126--139},
+title = {{OSMnx: New methods for acquiring, constructing, analyzing, and visualizing complex street networks}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/S0198971516303970},
+volume = {65},
+year = {2017}
+}
+
+ @misc{OpenStreetMap,
+   author = {{OpenStreetMap contributors}},
+   title = {{Planet dump retrieved from https://planet.osm.org }},
+   howpublished = "\url{ https://www.openstreetmap.org }",
+   year = {2017},
+ }
