update to addres cheginit

--- a/docs/paper/paper.bib
+++ b/docs/paper/paper.bib
@@ -321,9 +321,16 @@ volume = {65},
 year = {2017}
 }
 
- @misc{OpenStreetMap,
+@misc{OpenStreetMap,
+  author = {{OpenStreetMap contributors}},
+  title = {{Planet dump retrieved from https://planet.osm.org }},
+  howpublished = "\url{ https://www.openstreetmap.org }",
+  year = {2017},
+}
+
+ @misc{OpenStreetMap-overture,
    author = {{OpenStreetMap contributors}},
-   title = {{Planet dump retrieved from https://planet.osm.org }},
-   howpublished = "\url{ https://www.openstreetmap.org }",
-   year = {2017},
+   title = {{Overture Maps Foundation}},
+   howpublished = "\url{ https://overturemaps.org/ }",
+   year = {2024},
  }
